# bookstore4

./: README.md  db.sqlite3  pyproject.toml
bookstore4/: asgi.py  settings.py  urls.py  wsgi.py
