[tool.poetry]
name = "bookstore4"
version = "0.1.0"
description = "Booksrore API"
authors = ["Nunes"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.1"
factory-boy = "^3.2.1"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
